--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -58,6 +58,16 @@ h5, .h5 {
   }
 }
 
+.blockquote {
+  padding: .5rem 1rem;
+  border-left: .25rem solid $border-color;
+}
+
+.blockquote--reverse {
+  border-left: none;
+  border-right: .25rem solid $border-color;
+}
+
 small,
 .small {
   line-height: $small-line-height;
